fix overflow

--- a/cms/src/App.css
+++ b/cms/src/App.css
@@ -2,7 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Space+Mono&display=swap');
 
 body {
-    overflow: hidden;
     font-family: 'Montserrat', sans-serif;
     background-color: #f4f5f7 !important;
 }
